# StratMaster-CS2

./: .env.sample  .gitignore  ARCHITECTURE.md  ARCHITECTURE.txt  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main_api.py  main_bot.py
backend/app/api/: deps.py
backend/app/api/routers/: strategies.py  users.py  webhooks.py
backend/app/bot/handlers/: start.py
backend/app/bot/keyboards/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  models.py
backend/app/schemas/: strategy.py  user.py
backend/app/services/: referral.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  client.js  strategies.js
frontend/src/assets/: style.css
frontend/src/components/: Footer.vue  Header.vue
frontend/src/pages/: Home.vue
frontend/src/router/: index.js
frontend/src/store/: user.js
