[tool.poetry]
name = "stratmaster-backend"
version = "0.1.0"
description = "StratMaster CS2 — Backend API & Telegram Bot"
authors = ["StratMaster Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
aiogram = "^3.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
redis = {extras = ["asyncio"], version = "^5.0.8"}
httpx = "^0.27.0"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
anyio = {extras = ["asyncio"], version = "^4.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]